# cpp-serbia-nix-examples

./: .gitignore  README.md
01_system/: CMakeLists.txt
01_system/src/: main.cpp
02_docker/: CMakeLists.txt  Dockerfile
03_conan/: CMakeLists.txt  conanfile.txt
03_nix_shell/: shell.nix
03_nix_shell/src/: main.cpp
04_nix/: default.nix
04_nix/src/: main.cpp
05_nix/: CMakeLists.txt  default.nix
